cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_453.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/lib/apps.c:1482: error: DEAD_STORE
  The value written to &j (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/lib/apps.c:1482:5: Write of unused value
1480.       j = BIO_snprintf(buf[2], sizeof(buf[2]), "%s.attr", dbfile);
1481.       j = BIO_snprintf(buf[1], sizeof(buf[1]), "%s.attr.%s", dbfile, suffix);
1482.       j = BIO_snprintf(buf[0], sizeof(buf[0]), "%s.%s", dbfile, suffix);
            ^
1483.   #else
1484.       j = BIO_snprintf(buf[2], sizeof(buf[2]), "%s-attr", dbfile);
